# plutus-pedersen

./: README.md  cabal.project  flake.nix
nix/: project.nix  shell.nix
plutus-pedersen/: plutus-pedersen.cabal
plutus-pedersen/src/Plutus/Crypto/: BlsUtils.hs  Pedersen.hs
