cabal-version: 3.0
name:          plutus-pedersen
version:       1.0.0.0
license:       Apache-2.0
author:        Thomas Vellekoop
maintainer:    thomas.vellekoop@iohk.io
synopsis:
  "A POC plutus implementation to benchmark pedersen commitments"

build-type:    Simple

library
  exposed-modules:
    Plutus.Crypto.BlsUtils
    Plutus.Crypto.Pedersen

  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base >=4.2 && <5
    , plutus-core ^>=1.36
    , plutus-tx ^>=1.36
